[package]
authors = ["johnz <johnz@lay2.dev>"]
edition = "2018"
name = "ckb-lib-rsa"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
ckb-std = {version = "0.9",optional = true}
email-rs = {git = "https://github.com/sking789/email-rs.git", branch = "multi-dkim-header"}
sha2 = {version = "0.9.2", default-features = false}

[build-dependencies]
blake2b-rs = "0.1.5"

[features]
default = ["no_std", "static_lib"]
no_std = ["ckb-std"]
static_lib = []
dynamic_lib = []