[package]
name = "ckb-lib-secp256k1"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB secp256k1 dynamic linking library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
ckb-std = {version = "0.9",optional = true}

[build-dependencies]
cfg-if = "1.0"
blake2b-rs = "0.2"

[features]
static_lib = ["ckb-std"]
dynamic_lib = ["ckb-std"]