[package]
name = "ckb-lib-smt"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
ckb-std = { version = "0.9", optional = true }

[build-dependencies]
blake2b-rs = "0.2"
cc = "1.0"

[features]
default = ["no_std", "static_lib"]
no_std = ["ckb-std"]
static_lib = []
dynamic_lib = []
