[package]
name = "ckb-lib-smt"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
ckb-std = { version = "0.9", optional = true }

[build-dependencies]
cfg-if = "1.0"
blake2b-rs = "0.2"
cc = "1.0"

[features]
static_lib = ["ckb-std"]
dynamic_lib = ["ckb-std"]
